# ConcreteDamageDetection

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
CLI/: examples.py  main.py
CLI/data/: config.json
CLI/object_detection/: inference.py
concrete/: README.md  main.py  setup.cfg
concrete/cli/: examples.py  utils.py
concrete/object_detection/: inference.py
concrete/tests/: test_basics.py  test_hardware.py
data/: 3-fold-codebrim-10-1.yaml  3-fold-codebrim-10-2.yaml  3-fold-codebrim-10-3.yaml  AUGMENTED_CODEBRIM.yaml  augmented_codebrim_TEST.yaml  codebrim-10.yaml  codebrim-20.yaml  codebrim-30.yaml  codebrim-40.yaml  codebrim.yaml  hyp.yml
object_detection/: inference.py
tests/: test_basics.py  test_hardware.py
