[metadata]
name = concrete
version = attr:concrete.main.__version__
author = Daniel R. Torres Ruiz
author_email = danielr.torresruiz@gmail.com
home_page = https://github.com/DRTorresRuiz/ConcreteDamageDetection
description = Simple CLI for object detection
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
# packages = find:

[options.entry_points]
console_scripts =
    concrete = concrete.main:cli

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true